--- a/configs/stable_diffusion/metafile.yml
+++ b/configs/stable_diffusion/metafile.yml
@@ -6,4 +6,14 @@ Collections:
   Paper:
   - https://github.com/CompVis/stable-diffusion
   README: configs/stable_diffusion/README.md
-Models: []
+Models:
+- Config: configs/stable_diffusion/stable-diffusion_ddim_denoisingunet.py
+  In Collection: Stable Diffusion
+  Metadata:
+    Training Data: Others
+  Name: stable-diffusion_ddim_denoisingunet
+  Results:
+  - Dataset: Others
+    Metrics: {}
+    Task: Text2Image
+  Weights: ''
