--- a/.circleci/test.yml
+++ b/.circleci/test.yml
@@ -61,7 +61,7 @@ jobs:
           command: |
             pip install git+https://github.com/open-mmlab/mmengine.git@main
             pip install -U openmim
-            mim install 'mmcv >= 2.0.0rc1'
+            mim install 'mmcv >= 2.0.0'
             pip install -r requirements/tests.txt
       - run:
           name: Build and install
@@ -104,7 +104,7 @@ jobs:
           command: |
             docker exec mmedit pip install -e /mmengine
             docker exec mmedit pip install -U openmim
-            docker exec mmedit mim install 'mmcv >= 2.0.0rc1'
+            docker exec mmedit mim install 'mmcv >= 2.0.0'
             docker exec mmedit pip install -r requirements/tests.txt
       - run:
           name: Build and install
@@ -125,7 +125,7 @@ workflows:
             branches:
               ignore:
                 - dev-1.x
-                - 1.x
+                - main
   pr_stage_test:
     when:
       not:
@@ -137,7 +137,7 @@ workflows:
             branches:
               ignore:
                 - dev-1.x
-                - 1.x
+                - main
       - build_cpu:
           name: minimum_version_cpu
           torch: 1.8.1
