--- a/.github/workflows/merge_stage_test.yml
+++ b/.github/workflows/merge_stage_test.yml
@@ -14,7 +14,7 @@ on:
     branches:
       - dev-1.x
       - test-1.x
-      - 1.x
+      - main
       - test-branch
 
 concurrency:
@@ -46,7 +46,7 @@ jobs:
       - name: Install MMCV
         run: |
           pip install -U openmim
-          mim install 'mmcv >= 2.0.0rc1'
+          mim install 'mmcv >= 2.0.0'
       - name: Install other dependencies
         run: |
           pip install -r requirements/tests.txt
@@ -96,7 +96,7 @@ jobs:
       - name: Install MMCV
         run: |
           pip install -U openmim
-          mim install 'mmcv >= 2.0.0rc1'
+          mim install 'mmcv >= 2.0.0'
       - name: Install other dependencies
         run: |
           pip install -r requirements/tests.txt
@@ -148,7 +148,7 @@ jobs:
       - name: Install mmediting dependencies
         run: |
           pip install -U openmim
-          mim install 'mmcv >= 2.0.0rc1'
+          mim install 'mmcv >= 2.0.0'
           pip install -r requirements/tests.txt
       - name: Build and install
         run: |
@@ -185,7 +185,7 @@ jobs:
         run: |
           pip install git+https://github.com/open-mmlab/mmengine.git@main
           pip install -U openmim
-          mim install 'mmcv >= 2.0.0rc1'
+          mim install 'mmcv >= 2.0.0'
           pip install -r requirements/tests.txt
       - name: Build and install
         run: |
@@ -218,7 +218,7 @@ jobs:
         run: |
           python -m pip install git+https://github.com/open-mmlab/mmengine.git@main
           python -m pip install -U openmim
-          mim install 'mmcv >= 2.0.0rc1'
+          mim install 'mmcv >= 2.0.0'
           python -m pip install -r requirements/tests.txt
       - name: Build and install
         run: |
